fix alignment of grid elements

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url("base.css");
 
 .container {
-  max-width: 75%;
+  width: min(90%, 70rem);
   margin: 0 auto;
 }
 
@@ -9,7 +9,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 100px 0 60px 0;
+  margin: 90px 0 60px 0;
 }
 
 header ul {
@@ -38,28 +38,34 @@ header ul {
 
 main {
   display: grid;
-  gap: 2em;
+  gap: 2rem;
   grid-template-columns: repeat(3, 1fr);
   margin-bottom: 5rem;
 }
 
+main > img {
+  height: 100%;
+}
+
 .headline-title h1 {
-  padding-right: 1em;
+  padding-right: 0.5rem;
   font-weight: 800;
   font-size: 3.1rem;
   letter-spacing: 0.15rem;
   line-height: 3.2rem;
 }
 
-.headline p {
-  margin-bottom: 2rem;
+.headline {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .headline a button {
   border: none;
   background-color: var(--secondary);
   padding: 0.9rem 1rem;
-  width: 50%;
+  min-width: 50%;
   text-transform: uppercase;
   color: var(--offwhite);
   letter-spacing: 0.25rem;
@@ -72,17 +78,19 @@ main {
 
 aside {
   background-color: var(--verydarkblue);
-  padding: 1.5rem 1.5rem 0 1.5rem;
+  padding: 1.5rem;
   & li {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
     border-bottom: 1px solid var(--darkgrayishblue);
-    margin-block: 2em;
     &:last-of-type {
       border-bottom: none;
+      padding-bottom: 0;
     }
   }
   & h1 {
     font-weight: 700;
-    font-size: 2.25em;
+    font-size: 2.5em;
     color: var(--primary);
   }
   & h3 {
@@ -99,7 +107,6 @@ aside {
   }
 
   & p {
-    margin-bottom: 1.5rem;
     color: var(--grayishblue);
   }
 }
@@ -110,7 +117,7 @@ aside {
   gap: 1.3rem;
 
   & img {
-    height: 7.5rem;
+    width: 35%;
   }
 
   & div {
